JavaFX support windows / linus